--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
 
 .lenguajes li {
     /* width: 250px; */
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 /* RESPONSIVE */
