--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ body {
 /* contenedor__objecto__item-cambio */
 
 .main {
+    /* margin-top: 30px; */
+    margin: 30px;
     display: flex;
     position: relative;
     justify-content: center;
@@ -78,14 +80,14 @@ body {
     position: fixed;
     width: 50px;
     height: 50px;
-    background: #1d4389;
+    /* background: #1d4389; */
     right: 50px;
     bottom: 50px;
     z-index: 1;
 }
 
 .main__yo {
-    margin-bottom: 10px;
+    
     padding: 10px;
     color: #cce0a0;
     /* color: rgb(165, 165, 165); */
@@ -105,7 +107,7 @@ body {
 .main__avatar {
     background: none;
     justify-content: center;
-    padding-bottom: 30px;
+
 }
 
 .main__avatar__img {
@@ -141,7 +143,7 @@ body {
     padding: 5px;
     font-size: 11px;
     font-style: italic;
-    background:  	#d4112425;
+    background:  	#d411241c;
 }
 
 .responsive {
@@ -149,38 +151,37 @@ body {
 }
 
 .lenguajes {
-    /* display: flex;
-    flex-wrap: wrap; */
     display: grid;
-    gap: 1rem;
-    grid-template-rows: 11rem;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    grid-gap: 10px;
+    padding: 10px;
+    grid-template:
+        'a a a'
+        'b b c'
+        'b b c'
+    ;
 }
 
+.lenguajes__a {
+    background: #1d4389;
+    color: white;
+    border-radius: 10px;
+    grid-area: a;
+}
 
-/* .lenguajes li {
-    width: 250px; 
-    border: 1px solid red;
-} */
+.lenguajes__b {
+    background: #1d4389;
+    color: white;
+    border-radius: 10px;
+    grid-area: b;
+}
 
-/* RESPONSIVE */
-/* 
-    1. FLEX - FLEX WRAP
-        display: flex;
-        flex-wrap: wrap;
-    2. GRID 
-        display: grid;
-        grid-template-rows: 11rem;
-        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    3. Media Query's
-        @media only screen and (max-width: 600px) {}
+.lenguajes__c {
+    background: #1d4389;
+    color: white;
+    border-radius: 10px;
+    grid-area: c;
+}
 
-*/
-
-/* ABSOLUTOS - DINAMICOS */
-/* 16px = 1rem
-    x   = 11rem
-*/
 
 @media only screen and (max-width: 600px) {
     .menu__lista-item {
@@ -195,9 +196,11 @@ body {
         flex-direction: column;
     }
 
-    /* .lenguajes {
+    .lenguajes {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-    } */
+    }
 }
+
+/*  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); */
