--- a/notas.css
+++ b/notas.css
@@ -1,79 +1,38 @@
 /* 
+    CSS FUENTES
+    font-family: 'Open Sans', sans-serif;
+    font-zise: 16px;
+    font-weight: 400;
+    font-style: normal;
+    font-variant: normal;
 
-    etiqueta
-    id
-    clase
+    CSS COLORES
+    color: #000000;
+    background-color: #ffffff;
 
-*/
+    CSS TEXTOS
+    text-align: left;
+    text-decoration: none;
+    text-transform: none;
 
-/* h1 {
-    font-size: 50px;
-}
+    CSS LISTAS
+    list-style-type: none;
+    list-style-image: none;
+    list-style-position: outside;
 
-.menu {
-    display: flex;
-}
+    CSS TABLAS
+    border-collapse: collapse;
+    border-spacing: 0;
 
-#menu__avatar {
-    width: 50px;
-} */
+    CSS ENLACES
+    a:link {color: #000000;}
+    a:visited {color: #000000;}
+    a:hover {color: #000000;}
 
-/* QUITAR LISTAS */
+    CSS IMAGENES
+    border: 0;
+    vertical-align: middle;
+    width: 100%;
 
-/* .lista {
-    list-style: none;
-} */
-
-/*  */
-/*  */
-/*  */
-/*  */
-/*  */
-/*  */
-/*  */
-/*  */
-
-
-/* .lista {
-    list-style: georgian;
-}
-
-.lenguajes .lista {
-    list-style: disc;
-} */
-
-/* NOTAS (español)
-
-- flex container
-
-Display: flex; es una propiedad que permite al elemento contenedor (en este caso .container) que sus elementos hijos (en este caso .item) se comporten como si fueran flexibles.
-
-IMPORTANTE flex-direction (row, row-reverse, column, column-reverse): define la dirección en la que se colocan los elementos hijos.
-
-IMPORTANTE flex-wrap (nowrap, wrap, wrap-reverse): define si los elementos hijos se colocan en una sola línea o en varias.
-
-flex-flow (flex-direction y flex-wrap): define la dirección y el comportamiento de los elementos hijos.
-
-IMPORTANTE justify-content (flex-start, flex-end, center, space-between, space-around, space-evenly): define la alineación de los elementos hijos en el eje principal.
-
-IMPORTANTE align-items (flex-start, flex-end, center, baseline, stretch): define la alineación de los elementos hijos en el eje transversal.
-
-align-content: (flex-start, flex-end, center, space-between, space-around, stretch): define la alineación de las líneas de elementos hijos en el eje transversal.
-
-gap, row-gap, column-gap (tamaño): define el espacio entre los elementos hijos.
-
-- Flex items
-
-Flex: 1; es una propiedad que permite que el elemento hijo (en este caso .item) se expanda o contraiga en función de la cantidad de espacio disponible.
-
-order: 1; es una propiedad que permite ordenar los elementos hijos (en este caso .item) en el orden que se desee.
-
-flex-grow: 1; es una propiedad que permite que el elemento hijo (en este caso .item) se expanda en función de la cantidad de espacio disponible.
-
-flex-flow: row wrap; es una propiedad que permite que los elementos hijos (en este caso .item) se comporten como si fueran flexibles y se ajusten a la cantidad de espacio disponible.
-
-flex-shrink: 1; es una propiedad que permite que el elemento hijo (en este caso .item) se contraiga en función de la cantidad de espacio disponible.
-
-align-self: flex-end; es una propiedad que permite al elemento hijo (en este caso .item) alinearse en la dirección que se desee.
 
 */
