--- a/style.css
+++ b/style.css
@@ -1,233 +1,112 @@
-* {
+*{
     margin: 0px;
-    /* SEPARAR ENTRE CONTENEDOR */
     padding: 0px;
-    /* SEPARAR EL CONTENIDO INTERNO DEL CONTENEDOR */
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-/* MEDIA QUERY */
-/* 
-
-    MOVIL FIRST
-    DESTK FIRST
-
-    |-|-|-|-|-|-|-|-|
-
-*/
-
-/* @media (condicion) {
-
-} */
-
-body {
-    background: #0f0d25;
-    color: #cce0a0;
-    margin: 2px;
-}
-
-/* ESTILOS BASE */
-.lista {
     
+}
+
+body{
+    background-color: #011140;
+    color: #F2EEB6;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.presentacion{
+    text-align: center;
+    
+}
+
+h1{
+    font-size: 36px;
+    margin: 15px 0px;
+}
+
+.descripcion{
+    margin: 30px 0px;
+    
+}
+
+.enc{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #01062681;
+    justify-content: space-around;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.enc__pags{
+    display: flex;
+    align-items: center;
     list-style: none;
 }
 
-/* BEM */
-
-.menu {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 5px 0px;
-    background: #1d43893d;
+.enc__pags li a{
+    margin: 3px;
+    
+    
 }
 
-.menu__imagen {
-    /* item del contenedor */
+a{
+    color: #F2EEB6;
+    text-decoration: none;
+}
+
+.logo{
     width: 50px;
     height: 50px;
 }
 
-.menu__lista {
+.portada{
     display: flex;
-    align-items: center;
-}
-
-.menu__lista li a {
-    margin: 3px;
-    color: white;
-    text-decoration: none;
-}
-
-/* contenedor__objecto__item */
-/* contenedor__objecto__item-cambio */
-
-.main {
-    position: relative;
-    height: 400px;
-}
-
-.main__text {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    text-align: center;
-    width: 100%;
-    height: 100%;
+    
 }
 
-.bg {
-    position: absolute;
-    background: url('./assets/wolf.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    filter: blur(10px);
+.portada__img{
+    width: 150px;
+    height: 150px;
 }
 
-/* pseudoelementos */
-/* ALTERA AL ELEMENTO sin un estado */
-.bg::before {
-    content: '';
-    position: absolute;
-    background: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-}
-
-::selection {
-    background: #738253;
-    color: #0f0d25;
-}
-
-.main__yo {
-    margin-bottom: 10px;
-    padding: 10px;
-    color: #cce0a0;
-    /* color: rgb(165, 165, 165); */
-}
-
-
-.main__yo__h1 {
-    font-size: x-large;
-    text-align: center;
-}
-/* Pseudo-classes */
-/* CAMBIA CON UN ESTADO */
-.main__yo__h1:hover {
-    color: #616f41;
-}
-/* select */
-
-
-.main__yo__desc {
-    font-size: medium;
-    justify-content: center;
-    margin: 20px;
-}
-
-.main__avatar {
-    background: none;
-    justify-content: center;
-    padding-bottom: 30px;
-}
-
-.main__avatar__img {
-    width: 250px;
-    height: 250px;
-    border-radius: 10px 50px;
-}
-
-.info {
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.info__head {
-    font-size: large;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.info__head2 {
-    font-size: larger;
-    margin-left: 25px;
-}
-
-.info__par {
-    margin-left: 25px;
-}
-
-.pie {
-    color: rgba(215, 215, 215, 0.989);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px;
-    font-size: 11px;
-    font-style: italic;
-    background:  	#d4112425;
-}
-
-.responsive {
-    display: none;
-}
-
-.lenguajes {
-    /* display: flex;
-    flex-wrap: wrap; */
+.secciones{
+    margin-top: 25px;
     display: grid;
-    gap: 1rem;
-    /* grid-template-rows: 11rem; */
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    border: 1px solid red;
+    grid-template-areas: 
+        'a a a a'
+        'l l p p'
+        'c c c c';
+    gap: 25px;
+}
+
+.about{
+    grid-area: a;
+}
+
+.lenguajes{
+    grid-area: l;
+}
+
+.principal{
+    margin: 30px;
+    font-size: medium;
+}
+
+.proyectos{
+    grid-area: p;
+}
+
+.contact{
+    text-align: center;
+    grid-area: c;
+}
+
+.redes{
+    display: flex;
+    
 }
 
 
-.lenguajes li {
-    width: 250px; 
-    height: fit-content;
-    border: 1px solid red;
-}
 
-/* RESPONSIVE */
-/* 
-    1. FLEX - FLEX WRAP
-        display: flex;
-        flex-wrap: wrap;
-    2. GRID 
-        display: grid;
-        grid-template-rows: 11rem;
-        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    3. Media Query's
-        @media only screen and (max-width: 600px) {}
-
-*/
-
-/* ABSOLUTOS - DINAMICOS */
-/* 16px = 1rem
-    x   = 11rem
-*/
-
-@media only screen and (max-width: 600px) {
-    .menu__lista-item {
-        display: none;
-    }
-
-    .responsive {
-        display: block;
-    }
-
-    .main {
-        flex-direction: column;
-    }
-
-    .main__avatar__img {
-        width: 150px;
-        height: 150px;
-    }
+.pie{
+    display: flex;
+    background-color: #8c277b91;
+    
 }
