--- a/blog.scss
+++ b/blog.scss
@@ -1,14 +1,4 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    
-}
-
-body{
-    background-color: #011140;
-    color: #F2EEB6;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+@import 'global.scss';
 
 h1{
     font-size: 36px;
@@ -36,5 +26,4 @@ a{
         }
     }
 }
-
 
